# sopor

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  compose.yml
.github/workflows/: docker.yml
src/: ical.rs  main.rs  svoa.rs  templates.rs
src/providers/: edp_future.rs  exde.rs  falun.rs  indecta.rs  mod.rs  roslagsvatten.rs  sitevision_fetchplanner.rs  stockholm.rs  vasyd.rs
